--- a/configure.ac
+++ b/configure.ac
@@ -48,6 +48,7 @@ AC_SUBST([lispdir_realgud])
 AM_CONDITIONAL(INSTALL_EMACS_LISP, test "x$lispdir_realgud" != "x")
 
 AC_CONFIG_FILES([Makefile \
+                 common.mk \
 		 lldb/Makefile \
 		 test/Makefile \
 		 ])
