Correct "make install"
Don't install test files
Do install lldb subdirectory

--- a/lldb/Makefile.am
+++ b/lldb/Makefile.am
@@ -1,3 +1,5 @@
-include ../common.mk
 lisp_files = $(wildcard *.el)
 EXTRA_DIST=$(lisp_files)
+lisp_LISP = $(lisp_files)
+include ../common.mk
+lispdir = @lispdir@/lldb
