--- a/common.mk.in
+++ b/common.mk.in
@@ -7,7 +7,7 @@ short:
 %.short:
 	$(MAKE) $(@:.short=) 2>&1 >/dev/null
 
-# This is the default target but We need to include an EMACSLOADPATH
+# This is the default rule, but we need to include an EMACLOADPATH
 .el.elc:
 	if test "$(EMACS)" != "no"; then \
 	  am__dir=. am__subdir_includes=''; \
@@ -17,8 +17,8 @@ short:
 	  esac; \
 	  test -d "$$am__dir" || $(MKDIR_P) "$$am__dir" || exit 1; \
 	  EMACSLOADPATH=$(EMACSLOADPATH) $(EMACS) --batch \
-	    $(AM_ELCFLAGS) --eval "(progn(package-initialize))" \
+	    $(AM_ELCFLAGS) $(ELCFLAGS) \
 	    $$am__subdir_includes -L $(builddir) -L $(srcdir) \
-	    --eval "(defun byte-compile-dest-file (f) \"$@\")" \
+	    --eval "(defun byte-compile-dest-file-function (f) \"$@\")" \
 	    --eval "(unless (byte-compile-file \"$<\") (kill-emacs 1))"; \
 	else :; fi
